--- a/app/build.gradle
+++ b/app/build.gradle
@@ -25,11 +25,16 @@ dependencies {
     testCompile 'junit:junit:4.12'
     compile 'com.android.support:appcompat-v7:23.4.0'
     compile 'com.android.support:design:23.4.0'
-    compile 'com.google.android.gms:play-services-auth:8.3.0'
+    compile 'com.google.android.gms:play-services-auth:9.2.1'
     compile 'com.android.support:support-v4:23.4.0'
-    compile 'com.google.android.gms:play-services:9.0.0'
+    compile 'com.google.android.gms:play-services:9.2.1'
+    compile 'com.google.firebase:firebase-core:9.2.1'
+    compile 'com.google.firebase:firebase-messaging:9.2.1'
     compile 'com.android.support:cardview-v7:23.4.0'
     compile 'com.android.support:multidex:1.0.0'
     compile 'com.android.support:palette-v7:23.4.0'
+    compile 'com.squareup.okhttp3:okhttp:3.2.0'
     compile project(':kenburnsview-1.0.7')
+
 }
+apply plugin: 'com.google.gms.google-services'
