--- a/app/build.gradle
+++ b/app/build.gradle
@@ -23,6 +23,8 @@ android {
 dependencies {
     compile fileTree(include: ['*.jar'], dir: 'libs')
     testCompile 'junit:junit:4.12'
+    compile project(':kenburnsview-1.0.7')
+
     compile 'com.android.support:appcompat-v7:23.4.0'
     compile 'com.android.support:design:23.4.0'
     compile 'com.google.android.gms:play-services-auth:9.2.1'
@@ -34,7 +36,6 @@ dependencies {
     compile 'com.android.support:multidex:1.0.0'
     compile 'com.android.support:palette-v7:23.4.0'
     compile 'com.squareup.okhttp3:okhttp:3.2.0'
-    compile project(':kenburnsview-1.0.7')
-
+    compile 'com.android.support:recyclerview-v7:23.4.0'
 }
 apply plugin: 'com.google.gms.google-services'
