a) Added Nav Drawer in Order Activity b) IF order is already going on , cant go for another order in SelectSlotActivity c) Added a bottomsheet in Location activity which will show location
Signed-off-by: enggaloksingh <aloksingh.itbhu@gmail.com>

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -51,7 +51,7 @@
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="com.cherry.alok.myapplication.LocationActivityMap" />
         </activity>
-        <activity android:name=".OrderActivity" />
+        <activity android:name=".OrderActivity" android:theme="@style/AppTheme.NoActionBar" />
         <activity android:name=".OrderReview" />
 
         <service android:name=".FirebaseMessagingService">
