--- a/app/build.gradle
+++ b/app/build.gradle
@@ -24,18 +24,18 @@ dependencies {
     compile fileTree(include: ['*.jar'], dir: 'libs')
     testCompile 'junit:junit:4.12'
     compile project(':kenburnsview-1.0.7')
-
-    compile 'com.android.support:appcompat-v7:23.4.0'
-    compile 'com.android.support:design:23.4.0'
+    compile 'com.android.support:appcompat-v7:24.1.1'
+    compile 'com.android.support:design:24.1.1'
     compile 'com.google.android.gms:play-services-auth:9.2.1'
-    compile 'com.android.support:support-v4:23.4.0'
+    compile 'com.android.support:support-v4:24.1.1'
     compile 'com.google.android.gms:play-services:9.2.1'
     compile 'com.google.firebase:firebase-core:9.2.1'
     compile 'com.google.firebase:firebase-messaging:9.2.1'
-    compile 'com.android.support:cardview-v7:23.4.0'
+    compile 'com.android.support:cardview-v7:24.1.1'
     compile 'com.android.support:multidex:1.0.0'
-    compile 'com.android.support:palette-v7:23.4.0'
+    compile 'com.android.support:palette-v7:24.1.1'
     compile 'com.squareup.okhttp3:okhttp:3.2.0'
-    compile 'com.android.support:recyclerview-v7:23.4.0'
+    compile 'com.android.support:recyclerview-v7:24.1.1'
+    compile 'com.msg91.sendotp.library:library:2.7'
 }
 apply plugin: 'com.google.gms.google-services'
