Auto Read OTP , Sign Out bug fix and code cleanup
Signed-off-by: enggaloksingh <aloksingh.itbhu@gmail.com>

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -83,6 +83,11 @@
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="com.cherry.alok.myapplication.SelectSlotActivity" />
         </activity>
+        <receiver android:name=".SmsReceiver">
+            <intent-filter>
+                <action android:name="android.provider.Telephony.SMS_RECEIVED"/>
+            </intent-filter>
+        </receiver>
     </application>
 
 </manifest>
