--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -77,7 +77,7 @@
             android:name=".TransparentActivity"
             android:theme="@android:style/Theme.Translucent.NoTitleBar" />
         <activity android:name=".FeedbackActivity" />
-        <activity android:name=".FabHideActivity" />
+        <activity android:name=".FabHideActivity" android:theme="@style/AppTheme.NoActionBar" />
         <activity android:name=".Activity_Payment">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
